--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,89 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@700&display=swap');
+
+h1 {
+  font-family: 'Cormorant Upright', serif;
+}
+
+.header {
+  width: 100%;
+  height: 30em;
+  display: block;
+  position: relative;
+  margin: 0 auto;
+}
+.title h1 {
   text-align: center;
+  padding-top: 2em;
+  font-size: 4em;
+  color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header::after {
+  content: '';
+  background-image: url(./Pictures/coffeepictures.jpg);
+  background-position: center;
+  background-size: cover;
+  opacity: 0.65;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.serviceList {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: auto;
+  font-size: 15pt;
+  font-family: 'Cormorant Upright', serif;
+  position: relative;
+  top: 210px;
+  color: black;
 }
 
-.App-link {
-  color: #61dafb;
+.motto {
+  text-align: center;
+  padding: 3em 0
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.headerCell {
+  padding: 2em 0;
+}
+
+.serviceRow {
+  margin: 3em 0
+}
+
+img {
+  border: 1px solid black;
+  border-radius: 1em;
+}
+
+/*Screen Size Functions*/
+
+@media (min-width: 800px) {
+  /* Horizontal list */
+  .serviceList ul li {
+    display: inline-block;
   }
-  to {
-    transform: rotate(360deg);
+  .serviceList ul li:before {
+    content: '\00a0\2022\00a0\00a0';
+    color: #999;
+    color: black;
+    font-size: 11px;
   }
+  .serviceList ul li:first-child:before {
+    content: '';
+  }
+}
+
+/* Screen size changes */
+@media (max-width: 800px) {
+  .title h1 {
+    font-size: 3em;
+    padding-top: 1em;
+  }
+
 }
