--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ h1 {
 }
 
 .headerCell {
-  padding: 4em 0;
+  padding: 6em 0;
   text-align: center;
   font-family: 'Cormorant Upright', serif;
 }
@@ -85,9 +85,19 @@ h1 {
   align-items: center;
 }
 .footerBlock p {
-  margin: 0;;
+  margin: 0;
 }
 
+.bookForm {
+  width: 70%;
+  margin: 0 auto;
+  padding: 6.9em 0em;
+}
+
+.btnForm {
+  margin-right: 1em;
+  margin-top: 1em;
+}
 /*Screen Size Functions*/
 
 @media (min-width: 800px) {
@@ -106,11 +116,14 @@ h1 {
   }
 }
 
-/* Screen size changes */
+/* smaller screens */
 @media (max-width: 800px) {
   .title h1 {
     font-size: 3em;
     padding-top: 1em;
+  }
+  .bookForm {
+    padding: 4em 0em
   }
 
 }
