--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200&display=swap');
 h1 {
   font-family: 'Cormorant Upright', serif;
 }
@@ -12,7 +12,7 @@ h1 {
   margin: 0 auto;
 }
 .title h1 {
-  text-align: center;
+  margin-left: 2em;
   padding-top: 2em;
   font-size: 4em;
   color: black;
@@ -89,14 +89,76 @@ h1 {
 }
 
 .bookForm {
-  width: 70%;
-  margin: 0 auto;
-  padding: 6.9em 0em;
+  width: 40%;
+  margin: 0em auto;
+  padding-top: 3em;
+  padding-bottom: 7em;
+}
+
+.bookHeader {
+  width: 100%;
+  height: 30em;
+  display: block;
+  position: relative;
+}
+.bookHeader::after {
+  content: '';
+  background-image: url(./Pictures/CodeDevelopment.jpg);
+  background-position: center;
+  background-size: cover;
+  opacity: 0.65;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+.bookHeader h1 {
+  padding-top: 5em;
+  margin-left: 3em;
+}
+
+.form {
+  margin-top: 2em;
 }
 
 .btnForm {
   margin-right: 1em;
   margin-top: 1em;
+}
+
+.backgroundImg {
+  width: 100%;
+  height: 50em;
+  display: block;
+  position: relative;
+}
+
+.backgroundImg::after {
+  content: '';
+  background-image: url(./Pictures/blackboard.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+}
+
+.cardContainer {
+  padding-top: 3em;
+  
+}
+
+
+
+.cardService {
+  width: 17em;
 }
 /*Screen Size Functions*/
 
@@ -123,7 +185,7 @@ h1 {
     padding-top: 1em;
   }
   .bookForm {
-    padding: 4em 0em
+    width: 90%;
   }
 
 }
