--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,7 @@ h1 {
 .footerBlock {
   text-align: center;
   background-color: rgba(124, 67, 25, 0.425);
-  padding: 1em;
+  padding: 1em 0em;
   font-family:'Cormorant Upright', serif;
   display: flex;
   flex-direction: column;
@@ -152,14 +152,27 @@ h1 {
 
 .cardContainer {
   padding-top: 3em;
-  
+  display: flex;
+  justify-content: center;
+
 }
-
-
+.containerRow {
+  padding-top: 7em;
+  width: 100%;
+}
 
 .cardService {
-  width: 17em;
+  width: 18em;
 }
+
+.card-img {
+  opacity: 0.4;
+}
+
+.portfolioBg {
+  padding: 5em 0em;
+}
+
 /*Screen Size Functions*/
 
 @media (min-width: 800px) {
@@ -186,6 +199,15 @@ h1 {
   }
   .bookForm {
     width: 90%;
+  }
+
+  .backgroundImg {
+    width: 100%;
+    height: 70em;
+  }
+  .containerRow {
+    padding-top: 1em;
+    padding-bottom: 1em;
   }
 
 }
